--- a/aoc.cabal
+++ b/aoc.cabal
@@ -34,11 +34,14 @@ common shared-properties
 library
   import: shared-properties
   exposed-modules:
+    Common,
     Day1,
-    Day2
+    Day2,
+    Day3
 
   build-depends:
     text ^>= 2.1,
+    containers
 
   hs-source-dirs:   src
   default-language: Haskell2010
