--- a/aoc.cabal
+++ b/aoc.cabal
@@ -23,7 +23,7 @@ extra-source-files: CHANGELOG.md
 
 common shared-properties
   build-depends:
-    base ^>=4.15.1.0,
+    base ^>=4.17,
 
   ghc-options:
     -O2
@@ -37,10 +37,12 @@ library
     Common,
     Day1,
     Day2,
-    Day3
+    Day3,
+    Day4
 
   build-depends:
     text ^>= 2.1,
+    base ^>=4.17,
     containers
 
   hs-source-dirs:   src
